Update Grammaticus with 2020 changes
New languages: Amhartic, Khmer, Samoan, Hawaiian, Kazakh, Haitian Creole
Simplify fallback language support for implementors
Support graal.js for javascript/offline testing
Support ICU for number formatting as an optional dependency
Reduce logging of label issues